--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
   
-  <script src="C:\Users\portal\Desktop\test\Ashis7.github.io\3dscript.js"></script>
+  <script src="\Ashis7.github.io\3dscript.js"></script>
  
   <link rel="stylesheet" type="text/css" href="D:\slick-master\slick-master\slick\slick.css">
   <link rel="stylesheet" type="text/css" href="D:\slick-master\slick-master\slick\slick-theme.css">
-  <link rel="stylesheet" type="text/css" href="C:\Users\portal\Desktop\test\Ashis7.github.io\3dstyle.css">
+  <link rel="stylesheet" type="text/css" href="\Ashis7.github.io\3dstyle.css">
   
 </head>
 <body>
