google ad sense

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
-  
+  <script data-ad-client="ca-pub-8387624924830828" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="ca-pub-8387624924830828" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script src="\Ashis7.github.io\3dscript.js"></script>
  
   <link rel="stylesheet" type="text/css" href="D:\slick-master\slick-master\slick\slick.css">
