--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script data-ad-client="ca-pub-8387624924830828" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script src="\Ashis7.github.io\3dscript.js"></script>
  
-  <link rel="stylesheet" type="text/css" href="D:\slick-master\slick-master\slick\slick.css">
+  <link rel="stylesheet" type="text/css" href="\Ashis7.github.io\slick.css">
   <link rel="stylesheet" type="text/css" href="D:\slick-master\slick-master\slick\slick-theme.css">
   <link rel="stylesheet" type="text/css" href="\Ashis7.github.io\3dstyle.css">
   
