updated slick theme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="\Ashis7.github.io\3dscript.js"></script>
  
   <link rel="stylesheet" type="text/css" href="\Ashis7.github.io\slick.css">
-  <link rel="stylesheet" type="text/css" href="D:\slick-master\slick-master\slick\slick-theme.css">
+  <link rel="stylesheet" type="text/css" href="\Ashis7.github.io\slick-theme.css">
   <link rel="stylesheet" type="text/css" href="\Ashis7.github.io\3dstyle.css">
   
 </head>
